<resources>
    <string name="app_name">app1</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="edit_text_name_hint">Enter Your Nmae</string>
    <string name="edit_text_phone_hint">Enter Your Phone Number</string>
    <string name="edit_text_weight_hint">Enter Your Weight(pound)</string>
    <string name="edti_text_date">Choose Your Birth Date</string>

    <string name="btn_login">login</string>
    <string name="btn_signup">Sign Up</string>

    <string name="tv_name">Name:</string>
    <string name="tv_phone">Phone Number:</string>
    <string name="tv_weight">Weight:</string>
    <string name="tv_gender">Gender:</string>
    <string name="tv_date">Birth Date:</string>
    <string name="tv_blood_type">Choose Your Blood Type:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>