<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   >
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="3dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/tv_name"
            />

        <EditText
            android:id="@+id/edit_text_name"
            style="@style/EditTextStyle"
            android:hint="Enter Your Name"
            android:inputType="textPersonName"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/tv_phone" />

        <EditText
            android:id="@+id/edit_text_phone"
            style="@style/EditTextStyle"
            android:hint="@string/edit_text_phone_hint"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/tv_gender" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:gravity="center_vertical"
            android:background="@drawable/edit_text_style"
            android:padding="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/tv_weight" />

        <EditText
            android:id="@+id/edit_text_weight"
            style="@style/EditTextStyle"
            android:hint="@string/edit_text_weight_hint"
            android:inputType="number"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/tv_date" />

        <EditText

            style="@style/EditTextStyle"
            android:id="@+id/edit_text_birth_date"
            android:hint="@string/edti_text_date"
            android:focusable="false"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:text="@string/tv_blood_type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <RadioGroup
                android:id="@+id/radio_group_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/plus_a"
                    android:background="@drawable/custom_radio_button"
                    style="@style/RadioButtonStyle"
                    android:text="A+"
                    />

                <RadioButton
                    android:id="@+id/plua_b"
                    style="@style/RadioButtonStyle"
                    android:background="@drawable/custom_radio_button"
                    android:text="B+" />

                <RadioButton
                    android:id="@+id/plua_o"
                    style="@style/RadioButtonStyle"
                    android:background="@drawable/custom_radio_button"
                    android:text="O+" />

                <RadioButton
                    android:id="@+id/plua_ab"
                   style="@style/RadioButtonStyle"
                    android:background="@drawable/custom_radio_button"
                    android:text="AB+" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radio_group_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/minus_a"
                    style="@style/RadioButtonStyle"
                    android:background="@drawable/custom_radio_button"
                    android:text="A-" />

                <RadioButton
                    android:id="@+id/minus_o"
                    style="@style/RadioButtonStyle"
                    android:background="@drawable/custom_radio_button"
                    android:text="O-" />

                <RadioButton
                    android:id="@+id/minus_b"
                    style="@style/RadioButtonStyle"
                    android:background="@drawable/custom_radio_button"
                    android:text="B-" />

                <RadioButton
                    android:id="@+id/minus_ab"
                    style="@style/RadioButtonStyle"
                    android:background="@drawable/custom_radio_button"
                    android:text="AB-" />
            </RadioGroup>


        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_sign_up"
        android:layout_width="300dp"
        android:textColor="@color/app_text_color"
        android:background="@drawable/btn_backgroud"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup" />

    <TextView
        android:id="@+id/login_text"
        android:text="Alredy Sign Up! Login Here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>

</layout>